[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "libcst"
description = "A concrete syntax tree with AST-like properties for Python 3.0 through 3.14 programs."
version = "0.0.1"
license = { file = "LICENSE" }

requires-python = ">=3.9"
dependencies = [
    "pyyaml>=5.2; python_version < '3.13'",
    "pyyaml-ft>=8.0.0; python_version == '3.13'",
    "pyyaml>=6.0.3; python_version >= '3.14'",
    "typing-extensions; python_version < '3.10'",
]

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["libcst"]

[tool.uv.build-backend]
module-root = ""
